<resources>
    <string name="app_name">Northern Lights Animation</string>
    <string name="frame_anim_button_text">Frame Animation</string>
    <string name="rotate_anim_button_text">Rotate Animation</string>
    <string name="shake_anim_button_text">Shake Animation</string>
    <string name="flip_anim_button_text">Custom Animation</string>
    <string name="lights_image_view_text">Northern Lights</string>
</resources>
