<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_animation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.orangecoastcollege.cs273.jcabrera31.northernlightsanimation.AnimationActivity"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/lightsImageView"
        android:layout_marginBottom="10dp"
        android:layout_weight="6"
        android:background="@drawable/lights1"
        android:contentDescription="@string/lights_image_view_text"
        android:onClick="toggleFrameAnim" />

    <Button
        android:text="@string/frame_anim_button_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/frameAnimButton"
               android:layout_weight="1"
        android:layout_marginBottom="10dp"
        android:onClick="toggleFrameAnim" />

    <Button
        android:text="@string/rotate_anim_button_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/rotateAnimButton"

        android:layout_weight="1"
        android:layout_marginBottom="10dp"
        android:onClick="toggleRotateAnim" />

    <Button
        android:text="@string/shake_anim_button_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/shakeAnimButton"
        android:layout_weight="1"
        android:layout_marginBottom="10dp"
        android:onClick="toggleShakeAnim" />

    <Button
        android:text="@string/flip_anim_button_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/flipAnimButton"
        android:layout_weight="1"
        android:layout_marginBottom="10dp"
        android:onClick="toggleCustomAnim" />

</LinearLayout>
